_headerFW.scss
/* ... */
.headerFW__wrapper{display: flex;justify-content: space-between; 
  background: inherit;
}
.headerFW__logo__wrapper{display: flex; max-height: 120px; max-height: clamp(100px,15vh,120px); z-index: 1; flex-shrink: 0;
  // transition: all 0.15s;
  img{max-height: 100%;}
}
.headerFW__logo{display: block; font-size: 1em;padding: 1em;margin: 0;flex-shrink: 0; }
.headerFW__catchline{padding: 0.75em 1em; align-self: center;padding-left: 0; margin-left: -0.25em; }
.headerFW__nav__wrapper{display: flex; flex-grow: 1; justify-content: flex-end; transition: opacity 0.4s; background: inherit;
  ul{list-style: none; padding: 0;margin: 0;
    &:before,&:after{display: none;}
  }
  >*{order: 0;}
  .headerFW__nav__inline  {order:1}
  .headerFW__postnav      {order:2}
  .headerFW__search       {order:3}
  .headerFW__lang         {order:4}
  .headerFW__nav__panel   {order:66}
  .headerFW__nav__toggler {order:66}
}
.headerFW__nav__inline{ white-space: nowrap;
  >ul{height: 100%; display: grid; grid-auto-flow: column; 
    // grid-auto-columns: minmax(12ch,auto); // causes problems
    >li{height: 100%; 
      >*:not(ul){width: 100%;height: 100%;display: flex;align-items: center;justify-content: center; padding: 1em 1.25em; transition: all 0.5s;}
      >ul.offset-right{left: auto; right: 0;}
    }
  }
  li{position: relative;
    ul{
      position: absolute; 
      top: 100%; 
      box-shadow: 0px 0px 10px 1px rgba(0,0,0,.12);
      opacity: 0;
      visibility: hidden;
      transition: all .4s,transform 0.4s;
      background: body(block-background);
      color:  contrastFW(body(font-color),body(block-background));
      li{
        &:nth-of-type(2n){background: rgba(0,0,0,0.025);}
        >*:not(ul){padding: 0.5em 1.25em 0.75em; display: block;
          &.submenu:after{content:"";display: inline-block; width: 0;height: 0; border-style: solid; border-width: 0.65em 0.35em 0; border-color: currentColor transparent transparent;transform: rotate(-90deg);margin: 0; margin-left: 0.8em; margin-right: -0.25em; opacity: 0.15;}
        }
      }
      &:hover,&.hover{
        opacity: 1;
        visibility: visible;
      }
    }
    &:hover>ul,&.hover>ul{
      opacity: 1;
      visibility: visible;
    }
  }
  li ul ul{top: 0; left: 100%;
    &.offset-right{left: auto; right: 100%;
      ul{left: auto; right: 100%;}
    }
  }
}
[class*=headerFW] .chevron{cursor: pointer; padding: 0; position: relative; display: inline-flex; justify-content: center; align-items: center; font-size: 1em; width: 2.35em; height: 2.35em;
  &:before{
    content: "";
    display: block;
    border: 0.25em solid currentColor;
    border-bottom-right-radius: 2px;
    border-left: 0;
    border-top: 0;
    bottom: 0;
    height: 1em;
    width: 1em;
    transform: rotate(-45deg);
    transition: all .4s;
    border-bottom-right-radius: 0.125em;
  }
  &.left:before{transform: rotate(135deg);}
}
.headerFW__nav__panel{
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  width: 80%;
  width: clamp(80%,600px,100%);
  height: 80vh;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background: body(block-background);
  color:  contrastFW(body(font-color),body(block-background));
  transition: transform 0.6s,height 0.4s;
  transform: translate3d(-105%,0,0);
  z-index: -1;
  box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
  // &:before{content: "";position: absolute; top: 0;left: 0;width: 100vw; height: 100%;background: rgba(0,0,0,0.1);}
  &.active{transform: translate3d(0,0,0);
    &.mobile{ position: fixed; z-index: 1; top: 0; bottom: 0; height: auto !important;}
  }
  .headerFW.panel--right &{
    transform: translate3d(105%,0,0); left: auto; right: 0;
    &.active{transform: translate3d(0,0,0);}
  }
  ul.panel__item{
    position: relative;
    display: flex;
    flex-direction: column;
    list-style: none;
    padding: 0;
    width: 100%;
    margin: 0;
    pointer-events: none;
    transition: all 0.8s;
    overflow: auto;
    flex-grow: 1;
    background: inherit;
    height: 0; opacity: 0; visibility: hidden;
    &.active{opacity: 1; visibility: visible; height: 100%; pointer-events: all;}
    li{ position: relative; display: flex;justify-content: space-between;align-items: center;
      &:nth-of-type(2n){background: rgba(0,0,0,0.035);}
      >*:not(ul):not(.toggler){min-width: 200px; display: block;padding: 0.75em 1.25em ; flex-grow: 1;}
      &>.toggler{ padding: 0; width: 3em; opacity: .35; transition: all .4s;
        &:before{transform: translateX(-8px) rotate(-45deg); }
        &:hover{opacity: 1;}
      }
    }
  }
  .panel__title{padding: 0.75em 1.25em;  cursor: pointer; position: sticky; top: 0; background: inherit; z-index: 1;
    &:before{content:"";position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.035); z-index: -1;}
    span{font-size: 1.35em;font-style: italic; font-weight: 300;}
    .chevron{opacity: 0.35;}
  }
  .panel__actions{margin: auto 0 0; display: flex; position: sticky; bottom: 0; background: inherit;
    >*{flex-grow: 1; flex-basis: 0;}
    .back{background: rgba(0,0,0,0.5); color:white; padding: 0.8em 1.75em 1em; display: flex; justify-content: center;align-items: center; cursor: pointer;
      span{line-height: 1; font-size: 1.35em ; font-weight: 300; font-style: italic;}
      .chevron{opacity: 0.6;}
    }
  }
  &:not(.active){
    .panel__actions{pointer-events: none; visibility: hidden;}
  }
}
/* ... */

